<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- App Logo -->

        <!-- Title -->

        <!-- Username -->

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_login" />

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_username"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/etPassword"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="15dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="147dp"
            android:layout_height="52dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_round_shape"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btn_login"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <!-- Forgot / Register Links -->

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingEnd="16dp"
            android:text="@string/link_forgot"
            android:textColor="@android:color/holo_red_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:paddingStart="16dp"
                android:text="@string/link_register"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
